--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,43 @@
   <title>PortfolioApp</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.1/aos.css" />
+  <link rel="icon" type="image/x-icon" href="assets/img/logo.jpg">
 </head>
 <body>
   <app-root></app-root>
 </body>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.1/aos.js"></script>
+<script>
+  // Initialize AOS
+  AOS.init({
+    duration: 1000, // Animation duration
+  });
+
+  // Function to animate progress bars
+  const animateProgressBars = () => {
+    const progressBars = document.querySelectorAll('.progress-bar');
+    progressBars.forEach((bar) => {
+      const width = bar.getAttribute('aria-valuenow');
+      bar.style.width = width + '%';
+    });
+  };
+
+  // Event listener to trigger animation when scrolling to skills section
+  document.addEventListener('DOMContentLoaded', () => {
+    const skillsSection = document.getElementById('skills');
+
+    // Intersection Observer to detect when skills section is in view
+    const observer = new IntersectionObserver((entries) => {
+      entries.forEach(entry => {
+        if (entry.isIntersecting) {
+          animateProgressBars();
+          observer.disconnect(); // Stop observing after the animation
+        }
+      });
+    });
+
+    observer.observe(skillsSection);
+  });
+</script>
 </html>
